cmake_minimum_required(VERSION 2.8)

PROJECT(DICOMViewer)

FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
	INCLUDE(${ITK_USE_FILE})
	IF (ITKVtkGlue_LOADED)
		FIND_PACKAGE(VTK)
		IF (VTK_FOUND)
			INCLUDE(${VTK_USE_FILE})
		ENDIF(VTK_FOUND)
	ENDIF()
ENDIF(ITK_FOUND)

FIND_PACKAGE(DCMTK REQUIRED)
if(DCMTK_FOUND)
	INCLUDE_DIRECTORIES(${DCMTK_INCLUDE_DIRS})
endif()

FILE(GLOB SOURCE 
    "*.h"
	"*.hpp"
    "*.cxx"
)

ADD_EXECUTABLE(DICOMViwer ${SOURCE} )
TARGET_LINK_LIBRARIES (DICOMViwer ${ITK_LIBRARIES} ${VTK_LIBRARIES} ${DCMTK_LIBRARIES}) 